[tool.poetry]
name = "locast"
version = "0.1.0"
description = ""
authors = ["sirEven <sir_even@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dydx-v4-client = {git = "https://github.com/dydxprotocol/v4-clients.git", rev = "main", subdirectory = "v4-client-py-v2"}
sir-utilities = "^0.1.3"
python-dateutil = "^2.9.0.post0"
sqlmodel = "^0.0.21"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
