[tool.poetry]
name = "locast"
version = "0.1.7"
description = ""
authors = ["sirEven <sir_even@icloud.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4"
dydx-v4-client = "^1.1.1"
sir-utilities = "^0.1.3"
python-dateutil = "^2.9.0.post0"
sqlmodel = "^0.0.21"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"
ipykernel = "^6.29.5"

[tool.coverage.run]
omit = [
    "main.py",
    "tests/*",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test"
]
