[tool.poetry]
name = "locast"
version = "0.1.0"
description = "Local candle store (locast) allows to download, store, update and retrieve price candle data for local use."
authors = ["sirEven <sir_even@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
